Cur state
